--- a/jojo-client/package.json
+++ b/jojo-client/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "14.2.21",
+    "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
@@ -23,9 +24,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.21",
+    "eslint-config-next": "14.2.16",
     "postcss": "^8",
-    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
